fix : 파일 리더시 깨지는 문제 수정